# ComfyUI-PromptDrafter

./: .gitignore  LICENSE  README.md  __init__.py  config.json  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
js/: promptdrafter.js
nodes/: __init__.py  dual_prompt_drafter.py  prompt_combiner.py  single_prompt_drafter.py  wildcard_node.py
saved/dual_prompts/: anime_style.json  portrait_base.json
saved/single_prompts/: negative_base.json  quality_tags.json
saved/wildcards/: art_styles.json  eye_colors.json  hair_colors.json  lighting_styles.json
utils/: __init__.py  file_manager.py  text_processor.py  wildcard_parser.py
