[project]
name = "comfyui-promptdrafter"
version = "1.0.0"
description = "A custom node pack for ComfyUI that provides an intuitive prompt drafting, saving, loading and management system with wildcard support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["comfyui", "stable-diffusion", "prompt", "wildcard", "ai", "image-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Carasibana/ComfyUI-PromptDrafter"
Repository = "https://github.com/Carasibana/ComfyUI-PromptDrafter"
Issues = "https://github.com/Carasibana/ComfyUI-PromptDrafter/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["nodes*", "utils*"]

[tool.comfy]
PublisherId = "carasibana"
DisplayName = "ComfyUI-PromptDrafter"
